P4/src/y.output
Estado 123 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: PRINCIPAL bloque

    2 $@1: %empty

    3 bloque: INI_BLOQUE $@1 interiorBloque FIN_BLOQUE

    4 interiorBloque: dec_var_loc dec_subprogs sentencias
    5               | dec_var_loc dec_subprogs

    6 dec_subprogs: dec_subprogs dec_subprog
    7             | %empty

    8 $@2: %empty

    9 dec_subprog: cabe_subprog $@2 bloque

   10 $@3: %empty

   11 cabe_subprog: TIPO_BASICO identificador $@3 INI_EXPR cabe2

   12 $@4: %empty

   13 cabe2: lista_parametros FIN_EXPR $@4
   14      | FIN_EXPR

   15 $@5: %empty

   16 dec_var_loc: INI_VAR $@5 var_loc FIN_VAR
   17            | %empty

   18 var_loc: var_loc cuerpo_dec_var
   19        | cuerpo_dec_var

   20 $@6: %empty

   21 cuerpo_dec_var: TIPO_BASICO $@6 lista_identificador PTCOMA
   22               | error

   23 $@7: %empty

   24 sentencias: sentencias $@7 sentencia

   25 $@8: %empty

   26 sentencias: $@8 sentencia

   27 sentencia: bloque
   28          | sentencia_asig
   29          | sentencia_if
   30          | sentencia_do_until
   31          | sentencia_entrada
   32          | sentencia_salida
   33          | sentencia_return
   34          | error

   35 sentencia_asig: array_ident ASIG expresion PTCOMA

   36 sentencia_if: SI INI_EXPR expresion FIN_EXPR sentencia
   37             | SI INI_EXPR expresion FIN_EXPR sentencia SI_NO sentencia

   38 sentencia_do_until: HACER bloque HASTA INI_EXPR expresion FIN_EXPR

   39 sentencia_entrada: ENTRADA lista_identificador PTCOMA

   40 sentencia_salida: SALIDA lista_expr PTCOMA

   41 @9: %empty

   42 sentencia_return: RETORNO expresion @9 PTCOMA

   43 expresion: INI_EXPR expresion FIN_EXPR
   44          | SUMARESTA expresion
   45          | OPUNARIO expresion
   46          | expresion OR expresion
   47          | expresion AND expresion
   48          | expresion XOR expresion
   49          | expresion OPIGUAL expresion
   50          | expresion SUMARESTA expresion
   51          | expresion OPREL expresion
   52          | expresion OPMUL expresion
   53          | funcion
   54          | constante
   55          | error

   56 constante: CTE_ENTERA
   57          | array_ident
   58          | CTE_LOGICA
   59          | CTE_REAL
   60          | CTE_CARACTER

   61 funcion: identificador INI_EXPR lista_expr FIN_EXPR
   62        | identificador INI_EXPR FIN_EXPR

   63 lista_identificador: lista_identificador COMA ident_array
   64                    | ident_array

   65 ident_array: identificador
   66            | identificador INI_TAM num FIN_TAM
   67            | identificador INI_TAM num FIN_TAM INI_TAM num FIN_TAM
   68            | error

   69 array_ident: identificador
   70            | identificador INI_TAM lista_expr FIN_TAM
   71            | identificador INI_TAM lista_expr FIN_TAM INI_TAM lista_expr FIN_TAM

   72 lista_parametros: lista_parametros COMA TIPO_BASICO ident_array
   73                 | TIPO_BASICO ident_array
   74                 | lista_parametros error TIPO_BASICO ident_array

   75 identificador: CADENA

   76 num: CTE_ENTERA

   77 lista_expr: lista_expr COMA expresion
   78           | expresion


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 22 34 55 68 74
    PRINCIPAL (258) 1
    INI_BLOQUE (259) 3
    FIN_BLOQUE (260) 3
    INI_VAR (261) 16
    FIN_VAR (262) 16
    INI_EXPR (263) 11 36 37 38 43 61 62
    FIN_EXPR (264) 13 14 36 37 38 43 61 62
    INI_TAM (265) 66 67 70 71
    FIN_TAM (266) 66 67 70 71
    PTCOMA (267) 21 35 39 40 42
    COMA (268) 63 72 77
    TIPO_BASICO (269) 11 21 72 73 74
    CADENA (270) 75
    CTE_CARACTER (271) 60
    CTE_ENTERA (272) 56 76
    CTE_LOGICA (273) 58
    CTE_REAL (274) 59
    SI (275) 36 37
    SI_NO (276) 37
    RETORNO (277) 42
    ENTRADA (278) 39
    SALIDA (279) 40
    HACER (280) 38
    HASTA (281) 38
    OR (282) 46
    AND (283) 47
    XOR (284) 48
    ASIG (285) 35
    OPREL (286) 51
    OPIGUAL (287) 49
    SUMARESTA (288) 44 50
    OPMUL (289) 52
    OPUNARIO (290) 45


No terminales con las reglas donde aparecen

    $accept (36)
        on left: 0
    programa (37)
        on left: 1
        on right: 0
    bloque (38)
        on left: 3
        on right: 1 9 27 38
    $@1 (39)
        on left: 2
        on right: 3
    interiorBloque (40)
        on left: 4 5
        on right: 3
    dec_subprogs (41)
        on left: 6 7
        on right: 4 5 6
    dec_subprog (42)
        on left: 9
        on right: 6
    $@2 (43)
        on left: 8
        on right: 9
    cabe_subprog (44)
        on left: 11
        on right: 9
    $@3 (45)
        on left: 10
        on right: 11
    cabe2 (46)
        on left: 13 14
        on right: 11
    $@4 (47)
        on left: 12
        on right: 13
    dec_var_loc (48)
        on left: 16 17
        on right: 4 5
    $@5 (49)
        on left: 15
        on right: 16
    var_loc (50)
        on left: 18 19
        on right: 16 18
    cuerpo_dec_var (51)
        on left: 21 22
        on right: 18 19
    $@6 (52)
        on left: 20
        on right: 21
    sentencias (53)
        on left: 24 26
        on right: 4 24
    $@7 (54)
        on left: 23
        on right: 24
    $@8 (55)
        on left: 25
        on right: 26
    sentencia (56)
        on left: 27 28 29 30 31 32 33 34
        on right: 24 26 36 37
    sentencia_asig (57)
        on left: 35
        on right: 28
    sentencia_if (58)
        on left: 36 37
        on right: 29
    sentencia_do_until (59)
        on left: 38
        on right: 30
    sentencia_entrada (60)
        on left: 39
        on right: 31
    sentencia_salida (61)
        on left: 40
        on right: 32
    sentencia_return (62)
        on left: 42
        on right: 33
    @9 (63)
        on left: 41
        on right: 42
    expresion (64)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 35 36 37 38 42 43 44 45 46 47 48 49 50 51 52 77 78
    constante (65)
        on left: 56 57 58 59 60
        on right: 54
    funcion (66)
        on left: 61 62
        on right: 53
    lista_identificador (67)
        on left: 63 64
        on right: 21 39 63
    ident_array (68)
        on left: 65 66 67 68
        on right: 63 64 72 73 74
    array_ident (69)
        on left: 69 70 71
        on right: 35 57
    lista_parametros (70)
        on left: 72 73 74
        on right: 13 72 74
    identificador (71)
        on left: 75
        on right: 11 61 62 65 66 67 69 70 71
    num (72)
        on left: 76
        on right: 66 67
    lista_expr (73)
        on left: 77 78
        on right: 40 61 70 71 77


Estado 0

    0 $accept: . programa $end

    PRINCIPAL  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: PRINCIPAL . bloque

    INI_BLOQUE  desplazar e ir al estado 3

    bloque  ir al estado 4


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 5


Estado 3

    3 bloque: INI_BLOQUE . $@1 interiorBloque FIN_BLOQUE

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 6


Estado 4

    1 programa: PRINCIPAL bloque .

    $default  reduce usando la regla 1 (programa)


Estado 5

    0 $accept: programa $end .

    $default  aceptar


Estado 6

    3 bloque: INI_BLOQUE $@1 . interiorBloque FIN_BLOQUE

    INI_VAR  desplazar e ir al estado 7

    $default  reduce usando la regla 17 (dec_var_loc)

    interiorBloque  ir al estado 8
    dec_var_loc     ir al estado 9


Estado 7

   16 dec_var_loc: INI_VAR . $@5 var_loc FIN_VAR

    $default  reduce usando la regla 15 ($@5)

    $@5  ir al estado 10


Estado 8

    3 bloque: INI_BLOQUE $@1 interiorBloque . FIN_BLOQUE

    FIN_BLOQUE  desplazar e ir al estado 11


Estado 9

    4 interiorBloque: dec_var_loc . dec_subprogs sentencias
    5               | dec_var_loc . dec_subprogs

    $default  reduce usando la regla 7 (dec_subprogs)

    dec_subprogs  ir al estado 12


Estado 10

   16 dec_var_loc: INI_VAR $@5 . var_loc FIN_VAR

    error        desplazar e ir al estado 13
    TIPO_BASICO  desplazar e ir al estado 14

    var_loc         ir al estado 15
    cuerpo_dec_var  ir al estado 16


Estado 11

    3 bloque: INI_BLOQUE $@1 interiorBloque FIN_BLOQUE .

    $default  reduce usando la regla 3 (bloque)


Estado 12

    4 interiorBloque: dec_var_loc dec_subprogs . sentencias
    5               | dec_var_loc dec_subprogs .
    6 dec_subprogs: dec_subprogs . dec_subprog

    TIPO_BASICO  desplazar e ir al estado 17

    FIN_BLOQUE  reduce usando la regla 5 (interiorBloque)
    $default    reduce usando la regla 25 ($@8)

    dec_subprog   ir al estado 18
    cabe_subprog  ir al estado 19
    sentencias    ir al estado 20
    $@8           ir al estado 21


Estado 13

   22 cuerpo_dec_var: error .

    $default  reduce usando la regla 22 (cuerpo_dec_var)


Estado 14

   21 cuerpo_dec_var: TIPO_BASICO . $@6 lista_identificador PTCOMA

    $default  reduce usando la regla 20 ($@6)

    $@6  ir al estado 22


Estado 15

   16 dec_var_loc: INI_VAR $@5 var_loc . FIN_VAR
   18 var_loc: var_loc . cuerpo_dec_var

    error        desplazar e ir al estado 13
    FIN_VAR      desplazar e ir al estado 23
    TIPO_BASICO  desplazar e ir al estado 14

    cuerpo_dec_var  ir al estado 24


Estado 16

   19 var_loc: cuerpo_dec_var .

    $default  reduce usando la regla 19 (var_loc)


Estado 17

   11 cabe_subprog: TIPO_BASICO . identificador $@3 INI_EXPR cabe2

    CADENA  desplazar e ir al estado 25

    identificador  ir al estado 26


Estado 18

    6 dec_subprogs: dec_subprogs dec_subprog .

    $default  reduce usando la regla 6 (dec_subprogs)


Estado 19

    9 dec_subprog: cabe_subprog . $@2 bloque

    $default  reduce usando la regla 8 ($@2)

    $@2  ir al estado 27


Estado 20

    4 interiorBloque: dec_var_loc dec_subprogs sentencias .
   24 sentencias: sentencias . $@7 sentencia

    FIN_BLOQUE  reduce usando la regla 4 (interiorBloque)
    $default    reduce usando la regla 23 ($@7)

    $@7  ir al estado 28


Estado 21

   26 sentencias: $@8 . sentencia

    error       desplazar e ir al estado 29
    INI_BLOQUE  desplazar e ir al estado 3
    CADENA      desplazar e ir al estado 25
    SI          desplazar e ir al estado 30
    RETORNO     desplazar e ir al estado 31
    ENTRADA     desplazar e ir al estado 32
    SALIDA      desplazar e ir al estado 33
    HACER       desplazar e ir al estado 34

    bloque              ir al estado 35
    sentencia           ir al estado 36
    sentencia_asig      ir al estado 37
    sentencia_if        ir al estado 38
    sentencia_do_until  ir al estado 39
    sentencia_entrada   ir al estado 40
    sentencia_salida    ir al estado 41
    sentencia_return    ir al estado 42
    array_ident         ir al estado 43
    identificador       ir al estado 44


Estado 22

   21 cuerpo_dec_var: TIPO_BASICO $@6 . lista_identificador PTCOMA

    error   desplazar e ir al estado 45
    CADENA  desplazar e ir al estado 25

    lista_identificador  ir al estado 46
    ident_array          ir al estado 47
    identificador        ir al estado 48


Estado 23

   16 dec_var_loc: INI_VAR $@5 var_loc FIN_VAR .

    $default  reduce usando la regla 16 (dec_var_loc)


Estado 24

   18 var_loc: var_loc cuerpo_dec_var .

    $default  reduce usando la regla 18 (var_loc)


Estado 25

   75 identificador: CADENA .

    $default  reduce usando la regla 75 (identificador)


Estado 26

   11 cabe_subprog: TIPO_BASICO identificador . $@3 INI_EXPR cabe2

    $default  reduce usando la regla 10 ($@3)

    $@3  ir al estado 49


Estado 27

    9 dec_subprog: cabe_subprog $@2 . bloque

    INI_BLOQUE  desplazar e ir al estado 3

    bloque  ir al estado 50


Estado 28

   24 sentencias: sentencias $@7 . sentencia

    error       desplazar e ir al estado 29
    INI_BLOQUE  desplazar e ir al estado 3
    CADENA      desplazar e ir al estado 25
    SI          desplazar e ir al estado 30
    RETORNO     desplazar e ir al estado 31
    ENTRADA     desplazar e ir al estado 32
    SALIDA      desplazar e ir al estado 33
    HACER       desplazar e ir al estado 34

    bloque              ir al estado 35
    sentencia           ir al estado 51
    sentencia_asig      ir al estado 37
    sentencia_if        ir al estado 38
    sentencia_do_until  ir al estado 39
    sentencia_entrada   ir al estado 40
    sentencia_salida    ir al estado 41
    sentencia_return    ir al estado 42
    array_ident         ir al estado 43
    identificador       ir al estado 44


Estado 29

   34 sentencia: error .

    $default  reduce usando la regla 34 (sentencia)


Estado 30

   36 sentencia_if: SI . INI_EXPR expresion FIN_EXPR sentencia
   37             | SI . INI_EXPR expresion FIN_EXPR sentencia SI_NO sentencia

    INI_EXPR  desplazar e ir al estado 52


Estado 31

   42 sentencia_return: RETORNO . expresion @9 PTCOMA

    error         desplazar e ir al estado 53
    INI_EXPR      desplazar e ir al estado 54
    CADENA        desplazar e ir al estado 25
    CTE_CARACTER  desplazar e ir al estado 55
    CTE_ENTERA    desplazar e ir al estado 56
    CTE_LOGICA    desplazar e ir al estado 57
    CTE_REAL      desplazar e ir al estado 58
    SUMARESTA     desplazar e ir al estado 59
    OPUNARIO      desplazar e ir al estado 60

    expresion      ir al estado 61
    constante      ir al estado 62
    funcion        ir al estado 63
    array_ident    ir al estado 64
    identificador  ir al estado 65


Estado 32

   39 sentencia_entrada: ENTRADA . lista_identificador PTCOMA

    error   desplazar e ir al estado 45
    CADENA  desplazar e ir al estado 25

    lista_identificador  ir al estado 66
    ident_array          ir al estado 47
    identificador        ir al estado 48


Estado 33

   40 sentencia_salida: SALIDA . lista_expr PTCOMA

    error         desplazar e ir al estado 53
    INI_EXPR      desplazar e ir al estado 54
    CADENA        desplazar e ir al estado 25
    CTE_CARACTER  desplazar e ir al estado 55
    CTE_ENTERA    desplazar e ir al estado 56
    CTE_LOGICA    desplazar e ir al estado 57
    CTE_REAL      desplazar e ir al estado 58
    SUMARESTA     desplazar e ir al estado 59
    OPUNARIO      desplazar e ir al estado 60

    expresion      ir al estado 67
    constante      ir al estado 62
    funcion        ir al estado 63
    array_ident    ir al estado 64
    identificador  ir al estado 65
    lista_expr     ir al estado 68


Estado 34

   38 sentencia_do_until: HACER . bloque HASTA INI_EXPR expresion FIN_EXPR

    INI_BLOQUE  desplazar e ir al estado 3

    bloque  ir al estado 69


Estado 35

   27 sentencia: bloque .

    $default  reduce usando la regla 27 (sentencia)


Estado 36

   26 sentencias: $@8 sentencia .

    $default  reduce usando la regla 26 (sentencias)


Estado 37

   28 sentencia: sentencia_asig .

    $default  reduce usando la regla 28 (sentencia)


Estado 38

   29 sentencia: sentencia_if .

    $default  reduce usando la regla 29 (sentencia)


Estado 39

   30 sentencia: sentencia_do_until .

    $default  reduce usando la regla 30 (sentencia)


Estado 40

   31 sentencia: sentencia_entrada .

    $default  reduce usando la regla 31 (sentencia)


Estado 41

   32 sentencia: sentencia_salida .

    $default  reduce usando la regla 32 (sentencia)


Estado 42

   33 sentencia: sentencia_return .

    $default  reduce usando la regla 33 (sentencia)


Estado 43

   35 sentencia_asig: array_ident . ASIG expresion PTCOMA

    ASIG  desplazar e ir al estado 70


Estado 44

   69 array_ident: identificador .
   70            | identificador . INI_TAM lista_expr FIN_TAM
   71            | identificador . INI_TAM lista_expr FIN_TAM INI_TAM lista_expr FIN_TAM

    INI_TAM  desplazar e ir al estado 71

    $default  reduce usando la regla 69 (array_ident)


Estado 45

   68 ident_array: error .

    $default  reduce usando la regla 68 (ident_array)


Estado 46

   21 cuerpo_dec_var: TIPO_BASICO $@6 lista_identificador . PTCOMA
   63 lista_identificador: lista_identificador . COMA ident_array

    PTCOMA  desplazar e ir al estado 72
    COMA    desplazar e ir al estado 73


Estado 47

   64 lista_identificador: ident_array .

    $default  reduce usando la regla 64 (lista_identificador)


Estado 48

   65 ident_array: identificador .
   66            | identificador . INI_TAM num FIN_TAM
   67            | identificador . INI_TAM num FIN_TAM INI_TAM num FIN_TAM

    INI_TAM  desplazar e ir al estado 74

    $default  reduce usando la regla 65 (ident_array)


Estado 49

   11 cabe_subprog: TIPO_BASICO identificador $@3 . INI_EXPR cabe2

    INI_EXPR  desplazar e ir al estado 75


Estado 50

    9 dec_subprog: cabe_subprog $@2 bloque .

    $default  reduce usando la regla 9 (dec_subprog)


Estado 51

   24 sentencias: sentencias $@7 sentencia .

    $default  reduce usando la regla 24 (sentencias)


Estado 52

   36 sentencia_if: SI INI_EXPR . expresion FIN_EXPR sentencia
   37             | SI INI_EXPR . expresion FIN_EXPR sentencia SI_NO sentencia

    error         desplazar e ir al estado 53
    INI_EXPR      desplazar e ir al estado 54
    CADENA        desplazar e ir al estado 25
    CTE_CARACTER  desplazar e ir al estado 55
    CTE_ENTERA    desplazar e ir al estado 56
    CTE_LOGICA    desplazar e ir al estado 57
    CTE_REAL      desplazar e ir al estado 58
    SUMARESTA     desplazar e ir al estado 59
    OPUNARIO      desplazar e ir al estado 60

    expresion      ir al estado 76
    constante      ir al estado 62
    funcion        ir al estado 63
    array_ident    ir al estado 64
    identificador  ir al estado 65


Estado 53

   55 expresion: error .

    $default  reduce usando la regla 55 (expresion)


Estado 54

   43 expresion: INI_EXPR . expresion FIN_EXPR

    error         desplazar e ir al estado 53
    INI_EXPR      desplazar e ir al estado 54
    CADENA        desplazar e ir al estado 25
    CTE_CARACTER  desplazar e ir al estado 55
    CTE_ENTERA    desplazar e ir al estado 56
    CTE_LOGICA    desplazar e ir al estado 57
    CTE_REAL      desplazar e ir al estado 58
    SUMARESTA     desplazar e ir al estado 59
    OPUNARIO      desplazar e ir al estado 60

    expresion      ir al estado 77
    constante      ir al estado 62
    funcion        ir al estado 63
    array_ident    ir al estado 64
    identificador  ir al estado 65


Estado 55

   60 constante: CTE_CARACTER .

    $default  reduce usando la regla 60 (constante)


Estado 56

   56 constante: CTE_ENTERA .

    $default  reduce usando la regla 56 (constante)


Estado 57

   58 constante: CTE_LOGICA .

    $default  reduce usando la regla 58 (constante)


Estado 58

   59 constante: CTE_REAL .

    $default  reduce usando la regla 59 (constante)


Estado 59

   44 expresion: SUMARESTA . expresion

    error         desplazar e ir al estado 53
    INI_EXPR      desplazar e ir al estado 54
    CADENA        desplazar e ir al estado 25
    CTE_CARACTER  desplazar e ir al estado 55
    CTE_ENTERA    desplazar e ir al estado 56
    CTE_LOGICA    desplazar e ir al estado 57
    CTE_REAL      desplazar e ir al estado 58
    SUMARESTA     desplazar e ir al estado 59
    OPUNARIO      desplazar e ir al estado 60

    expresion      ir al estado 78
    constante      ir al estado 62
    funcion        ir al estado 63
    array_ident    ir al estado 64
    identificador  ir al estado 65


Estado 60

   45 expresion: OPUNARIO . expresion

    error         desplazar e ir al estado 53
    INI_EXPR      desplazar e ir al estado 54
    CADENA        desplazar e ir al estado 25
    CTE_CARACTER  desplazar e ir al estado 55
    CTE_ENTERA    desplazar e ir al estado 56
    CTE_LOGICA    desplazar e ir al estado 57
    CTE_REAL      desplazar e ir al estado 58
    SUMARESTA     desplazar e ir al estado 59
    OPUNARIO      desplazar e ir al estado 60

    expresion      ir al estado 79
    constante      ir al estado 62
    funcion        ir al estado 63
    array_ident    ir al estado 64
    identificador  ir al estado 65


Estado 61

   42 sentencia_return: RETORNO expresion . @9 PTCOMA
   46 expresion: expresion . OR expresion
   47          | expresion . AND expresion
   48          | expresion . XOR expresion
   49          | expresion . OPIGUAL expresion
   50          | expresion . SUMARESTA expresion
   51          | expresion . OPREL expresion
   52          | expresion . OPMUL expresion

    OR         desplazar e ir al estado 80
    AND        desplazar e ir al estado 81
    XOR        desplazar e ir al estado 82
    OPREL      desplazar e ir al estado 83
    OPIGUAL    desplazar e ir al estado 84
    SUMARESTA  desplazar e ir al estado 85
    OPMUL      desplazar e ir al estado 86

    $default  reduce usando la regla 41 (@9)

    @9  ir al estado 87


Estado 62

   54 expresion: constante .

    $default  reduce usando la regla 54 (expresion)


Estado 63

   53 expresion: funcion .

    $default  reduce usando la regla 53 (expresion)


Estado 64

   57 constante: array_ident .

    $default  reduce usando la regla 57 (constante)


Estado 65

   61 funcion: identificador . INI_EXPR lista_expr FIN_EXPR
   62        | identificador . INI_EXPR FIN_EXPR
   69 array_ident: identificador .
   70            | identificador . INI_TAM lista_expr FIN_TAM
   71            | identificador . INI_TAM lista_expr FIN_TAM INI_TAM lista_expr FIN_TAM

    INI_EXPR  desplazar e ir al estado 88
    INI_TAM   desplazar e ir al estado 71

    $default  reduce usando la regla 69 (array_ident)


Estado 66

   39 sentencia_entrada: ENTRADA lista_identificador . PTCOMA
   63 lista_identificador: lista_identificador . COMA ident_array

    PTCOMA  desplazar e ir al estado 89
    COMA    desplazar e ir al estado 73


Estado 67

   46 expresion: expresion . OR expresion
   47          | expresion . AND expresion
   48          | expresion . XOR expresion
   49          | expresion . OPIGUAL expresion
   50          | expresion . SUMARESTA expresion
   51          | expresion . OPREL expresion
   52          | expresion . OPMUL expresion
   78 lista_expr: expresion .

    OR         desplazar e ir al estado 80
    AND        desplazar e ir al estado 81
    XOR        desplazar e ir al estado 82
    OPREL      desplazar e ir al estado 83
    OPIGUAL    desplazar e ir al estado 84
    SUMARESTA  desplazar e ir al estado 85
    OPMUL      desplazar e ir al estado 86

    $default  reduce usando la regla 78 (lista_expr)


Estado 68

   40 sentencia_salida: SALIDA lista_expr . PTCOMA
   77 lista_expr: lista_expr . COMA expresion

    PTCOMA  desplazar e ir al estado 90
    COMA    desplazar e ir al estado 91


Estado 69

   38 sentencia_do_until: HACER bloque . HASTA INI_EXPR expresion FIN_EXPR

    HASTA  desplazar e ir al estado 92


Estado 70

   35 sentencia_asig: array_ident ASIG . expresion PTCOMA

    error         desplazar e ir al estado 53
    INI_EXPR      desplazar e ir al estado 54
    CADENA        desplazar e ir al estado 25
    CTE_CARACTER  desplazar e ir al estado 55
    CTE_ENTERA    desplazar e ir al estado 56
    CTE_LOGICA    desplazar e ir al estado 57
    CTE_REAL      desplazar e ir al estado 58
    SUMARESTA     desplazar e ir al estado 59
    OPUNARIO      desplazar e ir al estado 60

    expresion      ir al estado 93
    constante      ir al estado 62
    funcion        ir al estado 63
    array_ident    ir al estado 64
    identificador  ir al estado 65


Estado 71

   70 array_ident: identificador INI_TAM . lista_expr FIN_TAM
   71            | identificador INI_TAM . lista_expr FIN_TAM INI_TAM lista_expr FIN_TAM

    error         desplazar e ir al estado 53
    INI_EXPR      desplazar e ir al estado 54
    CADENA        desplazar e ir al estado 25
    CTE_CARACTER  desplazar e ir al estado 55
    CTE_ENTERA    desplazar e ir al estado 56
    CTE_LOGICA    desplazar e ir al estado 57
    CTE_REAL      desplazar e ir al estado 58
    SUMARESTA     desplazar e ir al estado 59
    OPUNARIO      desplazar e ir al estado 60

    expresion      ir al estado 67
    constante      ir al estado 62
    funcion        ir al estado 63
    array_ident    ir al estado 64
    identificador  ir al estado 65
    lista_expr     ir al estado 94


Estado 72
